Use eclipse-temurin 25
Also enable Generational Shenandoah GC and Compact Object Headers